--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -20,6 +20,8 @@
 	"cta-title": "Say Hello To Bimbo Daycare.",
 
 	"footer-text": "We are committed to the families we serve. We combine educational activities, making new friends, outdoor play, and more, to help each child develop their skills for life.",
+	"copy-right": "All rights reserved by",
+
 
 	"slider-title": ["Welcome to Garderie", "Bimbo Daycare Inc."],
 	"slider-subtitle": "We believe it is important to provide an environment where every child feels safe and secure while they're away from home.",
