--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -20,6 +20,7 @@
 	"cta-title": "Dites bonjour à la garderie Bimbo.",
 
 	"footer-text": "Nous nous engageons envers les familles que nous servons. Nous combinons des activités éducatives, se faire de nouveaux amis, jouer en plein air et plus encore, pour aider chaque enfant à développer ses compétences pour la vie.",
+	"copy-right": "tous droits réservés par",
 
 	"slider-title": ["Bienvenue à la Garderie","Garderie Bimbo Inc."],
 	"slider-subtitle": "Nous croyons qu'il est important de fournir un environnement dans lequel chaque enfant se sent en sécurité lorsqu'il n'est pas à la maison.",
