--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,6 +1,6 @@
 {
-	"meta-title": "Machine Shop Bathurst | ADS Machine Shop Inc",
-	"meta-description": "If you are looking for quality conventional machining in Allardville, New Brunswick, look no further than ADS Machine Shop Inc.",
+	"meta-title": "Garderie Bimbo Daycare Inc.",
+	"meta-description": "Garderie Bimbo Daycare Inc. in Bathurst, New Brunswick provides quality childcare, preschool and after school care to children from birth to 12-years-old in a warm and welcoming environment.",
 	"home": "Home",
 	"about": "About Us",
 	"history": "History",
@@ -9,58 +9,59 @@
 	"our-facility": "Our Facility",
 	"services": "Our Services",
 	"gallery": "Gallery",
+	"programs": "Programs",
 	"contact": "Contact",
 	"language": "Language",
 	"our-services-programs": "Our Services / Programs",
 	"view-services": "View Services",
-	"view-projects": "View Projects",
 	"quick-links": "Quick Links",
+	"other-links": "Other Links",
 	"contact-us-now": "Contact Us Now",
 	"cta-title": "Say Hello To Bimbo Daycare.",
+	"more-photos": "More Photos",
+
+	"footer-text": "We are committed to the families we serve. We combine educational activities, making new friends, outdoor play, and more, to help each child develop their skills for life.",
+	"copy-right": "All rights reserved by",
 
 
-	"slider-title-1": "ADS Machine Shop Inc.",
-	"slider-subtitle-1": "We are fully equipped to build you new parts, repairs or replacement parts.",
-	"slider-title-2": "Conventional Machining & More...",
-	"slider-subtitle-2": "Quality machining company in Allardville, New Brunswick",
+	"slider-title": ["Welcome to Garderie", "Bimbo Daycare Inc."],
+	"slider-subtitle": "We believe it is important to provide an environment where every child feels safe and secure while they're away from home.",
 
-	"feature-title-1": "Expert Worker",
-	"feature-subtitle-1": "Our devoted and highly-qualified team is just a call or email away!",
-	"feature-title-2": "Quality Work",
-	"feature-subtitle-2": "High-quality products and its skillful and competent employees",
-	"feature-title-3": "24/7 Support",
-	"feature-subtitle-3": "We also offer a mobile welding and machining service available 24/7",
+	"feature-hero-title": "Some of the best features in Bimbo",
+	"feature-title-1": "Safe environment",
+	"feature-title-2": "Certified and fully trained staff",
+	"feature-title-3": "Partnership with parents",
+	"feature-title-4": "Outdoor play, and more",
 
-	"about-s1-p1": "ADS Machine Shop Inc. is a machining company in Allardville, New Brunswick. It stands out because of its high-quality products and its skillful and competent employees. Service is available 24/7.",
-	"about-s1-p2": "ADS Machine Shop Inc. offers many services, such as conventional machining, digital machining (CNC), welding, making and cutting of plasma CNC, and repair and conception of hydraulic cylinders. We also have a mobile welding and machining service.",
-	"about-s1-p3": "We work closely with our clients to ensure a customized service that lives up to their expectations.",
+	"about-hero-title": "Our History",
+	"about-text-1": ["Garderie Bimbo Daycare Inc opened as a non-profit daycare in 1975, we provide quality childcare, preschool programs as well as afterschool care to families in the chaleur region. Providing a great environment for children aged from birth to twelve years of age to learn. ", "Our educators have many years of expirence and meet all requirements in the provincial daycare standards. We understand that each child is unique and strive to meet the needs of each child, parent and our community."],
 
-	"about-s2-title": "Machining Experts in Northern New Brunswick",
-	"about-s2-p1": ["Looking for a machine shop in Bathurst? Look no further than ADS Machine Shop, your number one solution to all of your machining needs.", "Whether you need conventional machining, digital machining (CNC), welding, CNC plasma cutting, or the repair and conception of hydraulic cylinders, our team of experts is there to help."],
-	"about-s2-p2": "We also offer a mobile welding and machining service available 24/7 if ever catastrophe hits outside of our regular business hours.",
-	"about-s2-p3": "Throughout our many years of experience, we built our reputation of excellence thanks to our personalized service and fast results.",
-	"about-s2-p4": "We always work very closely with our clients to ensure that the end result exceeds your expectations.",
-	"about-s2-p5": "Don’t hesitate to contact us for all of your machining needs. Our devoted and highly-qualified team is just a call or email away!",
+	"facility-hero-title": "Our Facility",
+	"facility-text-1": ["All programs offered are designed to offer an environment that is fun, safe and stimulating for all children. The activities are designed to help children develop physically, intellectually, and socially. ", "We know that through play children can learn and be prepared for the next step, Kindergarten. "],
 
-	"our-gallery": "Our Gallery",
-	"gallery-title": "Discover ADS Machine Shop Inc.",
+	"gallery-hero-title": "Discover Bimbo Daycare",
+	"gallery-text": "Our Bathurst location provide an environment where every child feels safe and secure while they're away from home. A child is more likely to flourish when they feel that all is well in their world.",
 
-	"services-title": "For all of your machining needs",
-	"conventional-machining": "Conventional Machining",
-	"digital-machining": "Digital Machining (CNC)",
-	"welding": "Welding",
-	"manufacturing": "Manufacturing",
-	"CNC": "CNC Plasma Cutting",
-	"hydraulic-cylinders": "Hydraulic Cylinders",
-	"welding-mobile-machining": "Welding / Mobile Machining",
+	"services-hero-title": "Our Services / Programs",
+	"services-text-1": "At Garderie Bimbo Daycare Inc., your child will feel comfortable and relaxed while under our supervision. We believe it is important to provide an environment where every child feels safe and secure while they're away from home. A child is more likely to flourish when they feel that all is well in their world.",
+	"services-text-2": ["Open Monday to Friday 7 :00am – 5:30pm ", "(Due to covid19 our reduced hours are from 7:30am – 4:30pm)"],
+	"services-text-3": "Services Offered:",
 
-	"get-in-touch": "Get In Touch",
-	"contact-info": "Contact Info",
+
+	"contact-hero-title":"Contact Us",
+	"contact-text":"If you have any questions about any of our childcare services or would like to schedule a time to take a tour of our facility, feel free to fill out the information below and someone will get in contact with you as soon as possible.",
+	"hours-of-operation": "Hours of operation",
+	"email-us": "Email Us",
 	"enter-message": "Enter Message",
 	"enter-name": "Enter Name",
 	"enter-subject": "Entrer Subject",
-	"email": "Email",
-	"send": "Send"
-
-
+	"enter-email": "Enter Email",
+	"send": "Send Message",
+	"monday": "Monday",
+	"tuesday": "Tuesday",
+	"wednesday": "Wednesday",
+	"thursday": "Thursday",
+	"friday": "Friday",
+	"open-hours": "7:00 a.m. - 5:30 p.m",
+	"covid-opening-hours": "Due to covid19 our reduced hours are from 7:30am – 4:30pm"
 }
