--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -18,6 +18,7 @@
 	"other-links": "Other Links",
 	"contact-us-now": "Contact Us Now",
 	"cta-title": "Say Hello To Bimbo Daycare.",
+	"more-photos": "More Photos",
 
 	"footer-text": "We are committed to the families we serve. We combine educational activities, making new friends, outdoor play, and more, to help each child develop their skills for life.",
 	"copy-right": "All rights reserved by",
@@ -32,16 +33,14 @@
 	"feature-title-3": "Partnership with parents",
 	"feature-title-4": "Outdoor play, and more",
 
-	"about-s1-p1": "ADS Machine Shop Inc. is a machining company in Allardville, New Brunswick. It stands out because of its high-quality products and its skillful and competent employees. Service is available 24/7.",
-	"about-s1-p2": "ADS Machine Shop Inc. offers many services, such as conventional machining, digital machining (CNC), welding, making and cutting of plasma CNC, and repair and conception of hydraulic cylinders. We also have a mobile welding and machining service.",
-	"about-s1-p3": "We work closely with our clients to ensure a customized service that lives up to their expectations.",
+	"about-hero-title": "Our History",
+	"about-text-1": ["Garderie Bimbo Daycare Inc opened as a non-profit daycare in 1975, we provide quality childcare, preschool programs as well as afterschool care to families in the chaleur region. Providing a great environment for children aged from birth to twelve years of age to learn. ", "Our educators have many years of expirence and meet all requirements in the provincial daycare standards. We understand that each child is unique and strive to meet the needs of each child, parent and our community."],
 
-	"about-s2-title": "Machining Experts in Northern New Brunswick",
-	"about-s2-p1": ["Looking for a machine shop in Bathurst? Look no further than ADS Machine Shop, your number one solution to all of your machining needs.", "Whether you need conventional machining, digital machining (CNC), welding, CNC plasma cutting, or the repair and conception of hydraulic cylinders, our team of experts is there to help."],
-	"about-s2-p2": "We also offer a mobile welding and machining service available 24/7 if ever catastrophe hits outside of our regular business hours.",
-	"about-s2-p3": "Throughout our many years of experience, we built our reputation of excellence thanks to our personalized service and fast results.",
-	"about-s2-p4": "We always work very closely with our clients to ensure that the end result exceeds your expectations.",
-	"about-s2-p5": "Don’t hesitate to contact us for all of your machining needs. Our devoted and highly-qualified team is just a call or email away!",
+	"facility-hero-title": "Our Facility",
+	"facility-text-1": ["All programs offered are designed to offer an environment that is fun, safe and stimulating for all children. The activities are designed to help children develop physically, intellectually, and socially. ", "We know that through play children can learn and be prepared for the next step, Kindergarten. "],
+
+	"staff-hero-title":"Our Key Staff",
+	"staff-text": "The certified and fully trained staff at Garderie Bimbo Daycare serve as authority figures who will gently guide and instruct your child through each daily event, providing encouragement and support.",
 
 	"gallery-hero-title": "Discover Bimbo Daycare",
 	"gallery-text": "Our Bathurst location provide an environment where every child feels safe and secure while they're away from home. A child is more likely to flourish when they feel that all is well in their world.",
@@ -61,9 +60,11 @@
 	"enter-subject": "Entrer Subject",
 	"enter-email": "Enter Email",
 	"send": "Send Message",
-	"send": "Monday",
-	"send": "Tuesday",
-	"send": "Wednesday",
-	"send": "Thursday",
-	"send": "Friday"
+	"monday": "Monday",
+	"tuesday": "Tuesday",
+	"wednesday": "Wednesday",
+	"thursday": "Thursday",
+	"friday": "Friday",
+	"open-hours": "7:00 a.m. - 5:30 p.m",
+	"covid-opening-hours": "Due to covid19 our reduced hours are from 7:30am – 4:30pm"
 }
