--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -39,6 +39,9 @@
 	"facility-hero-title": "Our Facility",
 	"facility-text-1": ["All programs offered are designed to offer an environment that is fun, safe and stimulating for all children. The activities are designed to help children develop physically, intellectually, and socially. ", "We know that through play children can learn and be prepared for the next step, Kindergarten. "],
 
+	"staff-hero-title":"Our Key Staff",
+	"staff-text": "The certified and fully trained staff at Garderie Bimbo Daycare serve as authority figures who will gently guide and instruct your child through each daily event, providing encouragement and support.",
+
 	"gallery-hero-title": "Discover Bimbo Daycare",
 	"gallery-text": "Our Bathurst location provide an environment where every child feels safe and secure while they're away from home. A child is more likely to flourish when they feel that all is well in their world.",
 
