--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -24,7 +24,7 @@
 	"copy-right": "All rights reserved by",
 
 
-	"slider-title": ["Welcome to Garderie", "Bimbo Daycare Inc."],
+	"slider-title": ["Welcome to", "Bimbo Daycare Inc."],
 	"slider-subtitle": "We believe it is important to provide an environment where every child feels safe and secure while they're away from home.",
 
 	"feature-hero-title": "Some of the best features in Bimbo",
